# RustScanners

./: Cargo.toml  README.md  install.sh
man/: MANIFEST.json  MANIFEST.md
man/src/: config.json  config.md  context.json  context.md  issue.json  issue.md  lib.json  lib.md
man/src/checks/: doc_comments.json  doc_comments.md  hardcoded_durations.json  hardcoded_durations.md  magic_numbers.json  magic_numbers.md  mod.json  mod.md  string_states.json  string_states.md  unsafe_no_comment.json  unsafe_no_comment.md  unwrap_panic.json  unwrap_panic.md
proj/: ISSUES  rulestools.toml.example
scripts/: check_install_sync.sh
src/: config.rs  context.rs  gateway.rs  issue.rs  lib.rs  project.rs  scanner.rs
src/checks/: child_module_size.rs  doc_comments.rs  duplicate_pub_fn.rs  hardcoded_durations.rs  hardcoded_paths.rs  hardcoded_urls.rs  magic_numbers.rs  mod.rs  shared_guard.rs  sibling_import.rs  string_states.rs  unsafe_no_comment.rs  unwrap_panic.rs
src/gateway/: mod.rs  reader.rs  walker.rs
